# lucas-martino.github.io

./: LICENSE  codequality.sh  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
docs/: 404.html  CNAME  about.html  index.html  index.xml  robots.txt  search.json  sitemap.xml
docs/posts/: post1.html
docs/site_libs/bootstrap/: bootstrap-61a5e476c1b6c10bddcd49cfdfbb1110.min.css  bootstrap-b6da523bee9dcdb0192e21313ee07a6e.min.css
src/: _quarto.yml  about.qmd  index.qmd
src/posts/: post1.qmd
