[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
    "pip>=24.3.1",
    "ruff>=0.7.1",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
]

[project.scripts]
blog = "blog:main"

[dependency-groups]
dev = [
    "pyright>=1.1.386",
]
